Bug 167261 - Shift+F6 no longer moves focus to previous pane
Summary: Shift+F6 no longer moves focus to previous pane
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2 t...
Keywords: accessibility, bibisected, bisected, regression
Depends on:
Blocks: a11y, Accessibility
  Show dependency treegraph
 
Reported: 2025-06-27 07:33 UTC by Michael Weghorn
Modified: 2025-06-27 12:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2025-06-27 07:33:50 UTC
https://help.libreoffice.org/master/en-US/text/shared/guide/keyboard.html documents:

> Repeatedly pressing F6 switches the focus and circles through the following objects:
> 
> * menu bar,
> * every toolbar from top to bottom and from left to right,
> * every free window from left to right,
> * document
> 
> Press Shift+F6 to switch through objects in the opposite direction.

While moving focus using F6 works as expected, Shift+F6 no longer does.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0c31a8cd708fa29b4202243238863b4c939cd221
CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2025-06-27 07:38:30 UTC
Regression from

    commit 2ac51182e63c109bb44334f86b6ab3bcdf247494
    Author: Heiko Tietze
    Date:   Tue Sep 10 10:14:51 2024 +0200

        Related tdf#146906 - Remove hard-coded access to split window
        
        * Calc users can customize .uno:SplitWindow
        * Help modification in I00f75b4481a5795674a3a18eea7ca8701dc542fc

I'm currently looking into this.
Comment 2 Michael Weghorn 2025-06-27 07:44:46 UTC
Pending fix: https://gerrit.libreoffice.org/c/core/+/187080
Comment 3 Commit Notification 2025-06-27 10:35:31 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/774d00472b179805b629a2b18af3692c5d5e0944

tdf#167261 vcl a11y: Reverse-cycle through panes on Shift+F6 again

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-06-27 12:27:33 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/6d9377d97654203e73907d5ac7245c0768d4ecb4

tdf#167261 vcl a11y: Reverse-cycle through panes on Shift+F6 again

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-06-27 12:27:36 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/4f0d93e45c2d8aab315c61e5b342d5c4f120cbff

tdf#167261 vcl a11y: Reverse-cycle through panes on Shift+F6 again

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.