tdf#167261 vcl a11y: Reverse-cycle through panes on Shift+F6 again

Moving focus to the previous pane using Shift+F6
(i.e. moving focus in reverse direction as F6 does)
as documented at [1] broke in

    commit 2ac51182e63c109bb44334f86b6ab3bcdf247494
    Date:   Tue Sep 10 10:14:51 2024 +0200

        Related tdf#146906 - Remove hard-coded access to split window

Consider that key combination a cycle one again.
The above commit was about removing the key combo Shift+Ctrl+F6.
Adjust the check in TaskPaneList::IsCycleKey to exclude
that combo, but not plain Shift+F6.

[1] https://help.libreoffice.org/master/en-US/text/shared/guide/keyboard.html

Change-Id: Ibafeb2f021b0f77e519275b5b76e6cdebec4dc60
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187080
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit 774d00472b179805b629a2b18af3692c5d5e0944)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187099
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>